# cb_jep106

./: Makefile  README.md  envsetup.sh  pyproject.toml
.github/workflows/: publish_to_pypi.yml
JEP106/: README_JEP106.md
cb_jep106/: __init__.py  cb_jep106.py  jep106.json
cb_jep106_tools/: cb_jep106_converter.py
test/: test_cb_jep106.py  test_cb_jep106_converter.py
